--- a/clothingStore/bin/main/application.properties
+++ b/clothingStore/bin/main/application.properties
@@ -2,5 +2,11 @@
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+# oracle set
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+spring.datasource.username=userid
+spring.datasource.password=1111
+
 #mybatis
 mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
