--- a/clothingStore/src/main/resources/application.properties
+++ b/clothingStore/src/main/resources/application.properties
@@ -3,10 +3,18 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 # oracle set
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
-spring.datasource.username=userid
-spring.datasource.password=1111
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@localhost:1521/orcl
+#spring.datasource.username=userid
+#spring.datasource.password=1111
+
+# mysql
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost/shop?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3307/shop?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username= user
+spring.datasource.password= 1111
 
 #mybatis
-mybatis.mapper-locations=classpath:mybatis/mapper/**/**.xml
+#mybatis.type-aliases-package=com.store.dao
+mybatis.mapper-locations=classpath:/mapper/**.xml
