--- a/clothingStore/build.gradle
+++ b/clothingStore/build.gradle
@@ -33,7 +33,9 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	implementation 'javax.servlet:jstl'
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'	
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
+    compile group: 'commons-io', name: 'commons-io', version: '2.7'
 }
 
 test {
