--- a/clothingStore/bin/main/application.properties
+++ b/clothingStore/bin/main/application.properties
@@ -1,3 +1,6 @@
+# Tomcat
+server.servlet.context-path=/images
+
 # JSP
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -10,11 +13,15 @@ spring.mvc.view.suffix=.jsp
 
 # mysql
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://localhost/shop?autoReconnect=true&useSSL=false
 spring.datasource.url=jdbc:mysql://localhost:3307/shop?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username= user
 spring.datasource.password= 1111
 
 #mybatis
-#mybatis.type-aliases-package=com.store.dao
 mybatis.mapper-locations=classpath:/mapper/**.xml
+
+#resources
+spring.servlet.multipart.file-size-threshold: 1MB
+spring.servlet.multipart.location: C:/Study/TEMP
+spring.servlet.multipart.max-file-size: 100MB
+spring.servlet.multipart.max-request-size: 100MB
