--- a/clothingStore/build.gradle
+++ b/clothingStore/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
 	compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
     compile group: 'commons-io', name: 'commons-io', version: '2.7'
+    compile group: 'net.coobird', name: 'thumbnailator', version: '0.4.11'
 }
 
 test {
