--- a/clothingStore/build.gradle
+++ b/clothingStore/build.gradle
@@ -21,6 +21,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	compile("org.springframework.boot:spring-boot-starter-mail")
+	
+  	compile "org.springframework:spring-context-support"
+  	compile "com.sun.mail:javax.mail"
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
