--- a/clothingStore/build.gradle
+++ b/clothingStore/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-mail"
   	compile "org.springframework:spring-context-support"
   	compile "com.sun.mail:javax.mail"
+  	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.2'
 }
 
 test {
