--- a/clothingStore/build.gradle
+++ b/clothingStore/build.gradle
@@ -22,7 +22,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compile("org.springframework.boot:spring-boot-starter-mail")
-	
+	compile 'com.googlecode.json-simple:json-simple:1.1.1'
   	compile "org.springframework:spring-context-support"
   	compile "com.sun.mail:javax.mail"
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
