--- a/clothingStore/build.gradle
+++ b/clothingStore/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 	compile("org.springframework.boot:spring-boot-starter-mail")
 	compile 'com.googlecode.json-simple:json-simple:1.1.1'
   	compile "org.springframework:spring-context-support"
