--- a/clothingStore/.project
+++ b/clothingStore/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>clothingStore_</name>
-	<comment>Project clothingStore_ created by Buildship.</comment>
+	<name>clothingStore</name>
+	<comment>Project clothingStore created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
